--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="container flex bg-black">
         <div class="left">
             <div class="close">
-                <img src="/all svg/close.svg" class="invert" alt="">
+                <img src="all svg/close.svg" class="invert" alt="">
             </div>
             <div class="home rounded bg-gray m-1 p-1">
-                <div class="logo"><img class="invert" src="/all svg/logo.svg" alt="logo"></div>
+                <div class="logo"><img class="invert" src="all svg/logo.svg" alt="logo"></div>
                 <ul>
-                    <li><img class="invert" src="/all svg/home.svg" alt="home">Home</li>
-                    <li><img class="invert" src="/all svg/search.svg" alt="search">Search</li>
+                    <li><img class="invert" src="all svg/home.svg" alt="home">Home</li>
+                    <li><img class="invert" src="all svg/search.svg" alt="search">Search</li>
                 </ul>
             </div>
             <div class="library rounded bg-gray m-1 p-1">
@@ -49,7 +49,7 @@
             <div class="header rounded">
                 <div class="nav">
                     <div class="nav__btn">
-                        <img src="/all svg/hamburger.svg" class="invert hamburger" alt="">
+                        <img src="all svg/hamburger.svg" class="invert hamburger" alt="">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
                                 color="#000000" fill="none">
@@ -79,13 +79,13 @@
                         <div class="circle"></div>
                     </div>
                     <div class="volume">
-                        <img src="/all svg/volume3.svg" class="vol" alt="">
+                        <img src="all svg/volume3.svg" class="vol" alt="">
                         <input type="range" name="volume" class="range" id = " range" value="100">
                     </div>
                     <div class="songinfo"></div>
                     <div class="songbuttons">
                         <img id="previous" src="all svg/previous.svg" alt="">
-                        <img id="play" src="/all svg/play.svg" alt="">
+                        <img id="play" src="all svg/play.svg" alt="">
                         <img id="next" src="all svg/next.svg" alt="">
                     </div>
                     <div class="songtime"></div>
